--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 
     <script>
         // 보여줄 PDF 파일 경로 (같은 폴더에 sample.pdf가 있어야 함)
-        const url = './sample.pdf';
+        const url = 'https://drive.google.com/file/d/1XxySNIfk-iMxmmbG_w7En2LopO9zXIWH/view?usp=drive_link';
 
         let pdfDoc = null,
             pageNum = 1,
